--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion global_compileSdkVersion
+    buildToolsVersion global_buildToolsVersion
     defaultConfig {
         applicationId "com.dangbei.gonzalez.sample"
-        minSdkVersion 14
-        targetSdkVersion 25
+        minSdkVersion global_minSdkVersion
+        targetSdkVersion global_targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile "com.android.support:appcompat-v7:$global_supportVersion"
     compile project(':library')
 }
