feature:1、支持不填写自定义宽高；2添加setPaddingLeft()、setMarginLeft()方法

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$global_supportVersion"
+//    compile "com.dangbei:gonzalez:1.0.1-SNAPSHOT"
     compile project(':library')
 }
